# Poseidon

./: README.md  pyproject.toml
examples/: run_harbor.py
marine_autonomy/: __init__.py  colregs.py  dynamics.py  estimation.py  guidance.py  orchestrator.py  presets.py
marine_autonomy/adapters/: __init__.py  ais_adapter.py
marine_autonomy/contracts/: __init__.py  schemas.py
tests/: test_marine.py  test_poseidon_upgrade.py
